--- a/Round1/Algorithm/algorithm.ipynb
+++ b/Round1/Algorithm/algorithm.ipynb
@@ -237,6 +237,188 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'yfinance'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01myfinance\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01myf\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'yfinance'"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import yfinance as yf\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import MinMaxScaler \n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "\n",
+    "\n",
+    "# stock_data = yf.download('AAPL', start='2016-01-01', end='2021-10-01')\n",
+    "stock_data = day0_csv\n",
+    "stock_data.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "plt.figure(figsize=(15, 8))\n",
+    "plt.title('Stock Prices History')\n",
+    "plt.plot(stock_data['Close'])\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Prices ($)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparation of training set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_prices = stock_data['Close']\n",
+    "values = close_prices.values\n",
+    "training_data_len = math.ceil(len(values)* 0.8)\n",
+    "\n",
+    "scaler = MinMaxScaler(feature_range=(0,1))\n",
+    "scaled_data = scaler.fit_transform(values.reshape(-1,1))\n",
+    "train_data = scaled_data[0: training_data_len, :]\n",
+    "\n",
+    "x_train = []\n",
+    "y_train = []\n",
+    "\n",
+    "for i in range(60, len(train_data)):\n",
+    "    x_train.append(train_data[i-60:i, 0])\n",
+    "    y_train.append(train_data[i, 0])\n",
+    "    \n",
+    "x_train, y_train = np.array(x_train), np.array(y_train)\n",
+    "x_train = np.reshape(x_train, (x_train.shape[0], x_train.shape[1], 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparation of test Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = scaled_data[training_data_len-60: , : ]\n",
+    "x_test = []\n",
+    "y_test = values[training_data_len:]\n",
+    "\n",
+    "for i in range(60, len(test_data)):\n",
+    "  x_test.append(test_data[i-60:i, 0])\n",
+    "\n",
+    "x_test = np.array(x_test)\n",
+    "x_test = np.reshape(x_test, (x_test.shape[0], x_test.shape[1], 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting up LSTM Network Architecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.Sequential()\n",
+    "model.add(layers.LSTM(100, return_sequences=True, input_shape=(x_train.shape[1], 1)))\n",
+    "model.add(layers.LSTM(100, return_sequences=False))\n",
+    "model.add(layers.Dense(25))\n",
+    "model.add(layers.Dense(1))\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "model.fit(x_train, y_train, batch_size= 1, epochs=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.predict(x_test)\n",
+    "predictions = scaler.inverse_transform(predictions)\n",
+    "rmse = np.sqrt(np.mean(predictions - y_test)**2)\n",
+    "rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualising the Predicted Price "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = stock_data.filter(['Close'])\n",
+    "train = data[:training_data_len]\n",
+    "validation = data[training_data_len:]\n",
+    "validation['Predictions'] = predictions\n",
+    "plt.figure(figsize=(16,8))\n",
+    "plt.title('Model')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Close Price USD ($)')\n",
+    "plt.plot(train)\n",
+    "plt.plot(validation[['Close', 'Predictions']])\n",
+    "plt.legend(['Train', 'Val', 'Predictions'], loc='lower right')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
